# Artorias-of-the-abyss

./: .gitignore  ArtoriasOfTheAbyssUML 1.2.mdj  ArtoriasOfTheAbyssUML 1.3.mdj  ArtoriasOfTheAbyssUML 1.4.mdj  ArtoriasOfTheAbyssUML.mdj  CMakeLists.txt  DialogsTMP.txt  README.md  main.cpp
Model/: Animation.cpp  Animation.h  Bonfire.cpp  Bonfire.h  Catalyst.cpp  Catalyst.h  CharacterFactory.cpp  CharacterFactory.h  CharacterInputs.cpp  CharacterInputs.h  CollisionHandler.cpp  CollisionHandler.h  Enemy.cpp  Enemy.h  EstusFlask.cpp  EstusFlask.h  FinalRoom.cpp  FinalRoom.h  FourthRoom.cpp  FourthRoom.h  Game.cpp  Game.h  GameCharacter.cpp  GameCharacter.h  Gate.cpp  Gate.h  GreenBlossom.cpp  GreenBlossom.h  HUD.cpp  HUD.h  Hero.cpp  Hero.h  HomewardBone.cpp  HomewardBone.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  ItemFactory.cpp  ItemFactory.h  (+38 more)
Model/CollectibleItems/: ArtoriasSoul.cpp  ArtoriasSoul.h  GuardianSoul.cpp  GuardianSoul.h  Humanity.cpp  Humanity.h  ManusSoul.cpp  ManusSoul.h  OolacileResidentHead.cpp  OolacileResidentHead.h  OolacileSorcererHead.cpp  OolacileSorcererHead.h  StoneGuardianHelm.cpp  StoneGuardianHelm.h
Model/GameCharacters/: Enemy.cpp  Enemy.h  GameCharacter.cpp  GameCharacter.h  Hero.h
Model/Rooms/: FinalRoom.cpp  Room.h  SecondRoom.cpp  ThirdRoom.h
Textures/: Menu.xcf  Textures.xcf  mainMenu.xcf
src/: Bonfire.cpp  Bonfire.h  Catalyst.cpp  Catalyst.h  CharacterInputs.cpp  CharacterInputs.h  Constants.h  Game.cpp  Game.h  Gate.cpp  GreenBlossom.cpp  GreenBlossom.h  HUD.cpp  HUD.h  HomewardBone.cpp  HomewardBone.h  Item.cpp  Menu.cpp  Menu.h  Pendant.cpp  Pendant.h  Shop.cpp  Shop.h  Sword.cpp  Sword.h  Weapon.cpp  Weapon.h  achivementsObserver.cpp  achivementsObserver.h
src/GUI/: HUD.cpp  HUD.h  Inventory.cpp  Inventory.h  Menu.cpp  Menu.h  Shop.cpp  Shop.h
src/GameCharacters/: GameCharacter.cpp  GameCharacter.h  Hero.cpp  Hero.h  NPC.cpp  NPC.h  npcDialogues.txt
src/GameCharacters/Enemies/: Enemy.cpp  Enemy.h  Enemy1.cpp  Enemy1.h  EnemyFactory.cpp  EnemyFactory.h  Monster.cpp
src/Items/: EstusFlask.h  GreenBlossom.cpp  GreenBlossom.h  HomewardBone.cpp  HomewardBone.h  Item.cpp  Item.h  NullItem.cpp  NullItem.h  Pendant.cpp  Pendant.h
src/Rooms/: Bonfire.cpp  Bonfire.h  Gate.cpp  Gate.h  MiddleRoom.cpp  MiddleRoom.h  Room.cpp  Room.h  RoomElement.cpp  RoomElement.h  RoomFactory.cpp  RoomFactory.h  StartRoom.cpp  StartRoom.h  ThirdRoom.cpp
src/Textures/: Menu.xcf  Textures.xcf  mainMenu.xcf
src/Weapones/: Catalyst.cpp  Catalyst.h  Sword.cpp  Sword.h  Weapon.cpp  Weapon.h
test/: CMakeLists.txt  EntitiesInteractionsTest.cpp  FightingFixture.cpp  runAllTests.cpp
